e2e/capl-cluster-flavors/kubeadm-flatcar-vpcless-capl-cluster/assert-capi-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capi-controller-manager
  namespace: capi-system
status:
  availableReplicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capl-controller-manager
  namespace: capl-system
status:
  availableReplicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capi-kubeadm-bootstrap-controller-manager
  namespace: kubeadm-bootstrap-system
status:
  availableReplicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capi-kubeadm-control-plane-controller-manager
  namespace: kubeadm-control-plane-system
status:
  availableReplicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caaph-controller-manager
  namespace: caaph-system
status:
  availableReplicas: 1
