e2e/capl-cluster-flavors/kubeadm-flatcar-vpcless-capl-cluster/assert-child-cluster-resources.yaml
---
apiVersion: infrastructure.cluster.x-k8s.io/v1alpha1
kind: LinodeMachine
metadata:
  labels:
    cluster.x-k8s.io/cluster-name: ($cluster)
spec:
  region: (env('LINODE_REGION'))
  type: g6-standard-2
status:
  ready: true
  instanceState: running
---
apiVersion: cluster.x-k8s.io/v1beta1
kind: Machine
metadata:
  labels:
    cluster.x-k8s.io/cluster-name: ($cluster)
spec:
  clusterName: ($cluster)
status:
  bootstrapReady: true
  infrastructureReady: true
---
apiVersion: cluster.x-k8s.io/v1beta1
kind: MachineDeployment
metadata:
  labels:
    cluster.x-k8s.io/cluster-name: ($cluster)
spec:
  clusterName: ($cluster)
  replicas: 1
status:
  readyReplicas: 1
  unavailableReplicas: 0
  availableReplicas: 1
---
apiVersion: controlplane.cluster.x-k8s.io/v1beta1
kind: KubeadmControlPlane
metadata:
  labels:
    cluster.x-k8s.io/cluster-name: ($cluster)
status:
  readyReplicas: 1
  unavailableReplicas: 0
  ready: true
---
apiVersion: addons.cluster.x-k8s.io/v1alpha1
kind: HelmReleaseProxy
metadata:
  labels:
    cluster.x-k8s.io/cluster-name: ($cluster)
status:
  conditions:
  - type: Ready
    status: "True"
  - type: ClusterAvailable
    status: "True"
  - type: HelmReleaseReady
    status: "True"
  status: deployed
