e2e/capl-cluster-flavors/kubeadm-flatcar-vpcless-capl-cluster/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: flatcar-capl-cluster
  # Labels to allow the test to be triggered based on selector flag
  # TODO: re-enable this test once flatcar provisioning is working again
#  labels:
#    all:
#    kubeadm-flatcar:
#    flavors:
spec:
  catch:
    - script:
        env:
          - name: TARGET_API
            value: api.linode.com
          - name: TARGET_API_VERSION
            value: v4
          - name: URI
            value: images
          - name: LINODE_REGION
            value: (env('LINODE_REGION'))
        content: |
          set -e
          # Get the latest version on Alpha channel.
          # NOTE: This can be changed to Beta or Stable when Akamai support will come on these channels.
          IMAGE_ID=$(cat image-id)
          curl --request DELETE \
            --url "https://${TARGET_API}/${TARGET_API_VERSION}/${URI}/${IMAGE_ID}" \
            --header "Authorization: Bearer ${LINODE_TOKEN}" \
            --header "accept: application/json"
  bindings:
    # A short identifier for the E2E test run
    - name: run
      value: (join('-', ['e2e', 'flatcar', random('[0-9a-z]{5}')]))
    - name: cluster
      # Format the cluster name
      value: (trim((truncate(($run), `29`)), '-'))
  template: true
  steps:
    - name: Check if CAPI provider resources exist
      try:
        - assert:
            file: assert-capi-resources.yaml
    - name: Upload Flatcar image
      try:
        - script:
            env:
              - name: TARGET_API
                value: api.linode.com
              - name: TARGET_API_VERSION
                value: v4
              - name: URI
                value: images/upload
              - name: LINODE_REGION
                value: (env('LINODE_REGION'))
            content: |
              set -e
              # Get the latest version on Stable channel.
              curl -fsSL --remote-name \
                https://stable.release.flatcar-linux.net/amd64-usr/current/flatcar_production_akamai_image.bin.gz

              res=$(curl -s --request POST \
                --url "https://${TARGET_API}/${TARGET_API_VERSION}/${URI}" \
                --data '{"region":"'${LINODE_REGION}'","cloud_init":true,"label":"flatcar-stable"}' \
                --header "Authorization: Bearer ${LINODE_TOKEN}" \
                --header "accept: application/json" \
                --header "content-type: application/json")

              UPLOAD_URL=$(echo "${res}" | jq -r .upload_to)
              IMAGE_ID=$(echo "${res}" | jq -r .image.id)
              echo "${IMAGE_ID}" > image-id

              curl -s --request PUT \
                "${UPLOAD_URL}" \
                --header "Content-Type: application/octet-stream" \
                --upload-file flatcar_production_akamai_image.bin.gz \
                --progress-bar \
                --output /dev/null
            check:
              ($error): ~
    - name: Generate cluster using clusterctl
      try:
        - script:
            env:
              - name: CLUSTER
                value: ($cluster)
              - name: NAMESPACE
                value: ($namespace)
              - name: CLUSTERCTL_CONFIG
                value: (env('CLUSTERCTL_CONFIG'))
              - name: KUBERNETES_VERSION
                value: (env('KUBERNETES_VERSION') || 'v1.36.2')
            content: |
              set -e
              export FLATCAR_IMAGE_NAME=$(cat image-id)
              clusterctl generate cluster $CLUSTER -n $NAMESPACE \
              --kubernetes-version ${KUBERNETES_VERSION} \
              --infrastructure local-linode:v0.0.0 \
              --control-plane-machine-count 1 --worker-machine-count 1 \
              --flavor kubeadm-flatcar \
              --config ${CLUSTERCTL_CONFIG:=${HOME}/.cluster-api/clusterctl.yaml} > flatcar-cluster.yaml
            check:
              ($error == null): true
    - name: Apply generated cluster yaml
      try:
        - apply:
            file: flatcar-cluster.yaml
        - assert:
            file: assert-child-cluster-resources.yaml
      catch:
        - describe:
            apiVersion: infrastructure.cluster.x-k8s.io/v1alpha2
            kind: LinodeMachine
        - describe:
            apiVersion: cluster.x-k8s.io/v1beta2
            kind: Machine
        - describe:
            apiVersion: cluster.x-k8s.io/v1beta2
            kind: MachineDeployment
        - describe:
            apiVersion: controlplane.cluster.x-k8s.io/v1beta2
            kind: KubeadmControlPlane
        - describe:
            apiVersion: addons.cluster.x-k8s.io/v1alpha1
            kind: HelmReleaseProxy
    - name: Check if the linodes are created
      try:
        - script:
            env:
              - name: TARGET_API
                value: api.linode.com
              - name: TARGET_API_VERSION
                value: v4beta
              - name: URI
                value: linode/instances
              - name: FILTER
                value: (to_string({"tags":($cluster)}))
            content: |
              set -e
              curl -s \
                -H "Authorization: Bearer $LINODE_TOKEN" \
                -H "X-Filter: $FILTER" \
                -H "Content-Type: application/json" \
                "https://$TARGET_API/$TARGET_API_VERSION/$URI"
            check:
              ($error): ~
              (json_parse($stdout)):
                results: 2
    - name: Get child cluster kubeconfig
      try:
        - script:
            env:
              - name: CLUSTER
                value: ($cluster)
              - name: NAMESPACE
                value: ($namespace)
              - name: CLUSTERCTL_CONFIG
                value: (env('CLUSTERCTL_CONFIG'))
            content: |
              set -e
              clusterctl get kubeconfig $CLUSTER -n $NAMESPACE > flatcar-cluster-kubeconfig.yaml
            check:
              ($error == null): true
    - clusters:
        flatcar-cluster:
          kubeconfig: ./flatcar-cluster-kubeconfig.yaml
      name: Check child cluster resources
      try:
        - assert:
            cluster: flatcar-cluster
            file: assert-child-cluster-deployments.yaml
        - assert:
            cluster: flatcar-cluster
            file: assert-child-cluster-daemonsets.yaml
      catch:
        - describe:
            cluster: flatcar-cluster
            apiVersion: apps/v1
            kind: Deployment
            namespace: kube-system
        - describe:
            cluster: flatcar-cluster
            apiVersion: apps/v1
            kind: DaemonSet
            namespace: kube-system
    - name: Delete child cluster
      try:
        - delete:
            ref:
              apiVersion: cluster.x-k8s.io/v1beta2
              kind: Cluster
              name: ($cluster)
        - error:
            file: check-child-cluster-deleted.yaml
    - name: Check if the linodes are deleted
      try:
        - script:
            env:
              - name: TARGET_API
                value: api.linode.com
              - name: TARGET_API_VERSION
                value: v4beta
              - name: URI
                value: linode/instances
              - name: FILTER
                value: (to_string({"tags":($cluster)}))
            content: |
              set -e
              curl -s \
                -H "Authorization: Bearer $LINODE_TOKEN" \
                -H "X-Filter: $FILTER" \
                -H "Content-Type: application/json" \
                "https://$TARGET_API/$TARGET_API_VERSION/$URI"
            check:
              ($error): ~
              (json_parse($stdout)):
                results: 0
    - name: Delete generated child cluster manifest yaml
      try:
        - script:
            content: |
              rm -f flatcar-cluster.yaml
              rm -f flatcar-cluster-kubeconfig.yaml
            check:
              ($error == null): true
    - name: Delete Flatcar image
      try:
        - script:
            env:
              - name: TARGET_API
                value: api.linode.com
              - name: TARGET_API_VERSION
                value: v4
              - name: URI
                value: images
              - name: LINODE_REGION
                value: (env('LINODE_REGION'))
            content: |
              set -e
              # Get the latest version on Alpha channel.
              # NOTE: This can be changed to Beta or Stable when Akamai support will come on these channels.
              IMAGE_ID=$(cat image-id)
              curl --request DELETE \
              --url "https://${TARGET_API}/${TARGET_API_VERSION}/${URI}/${IMAGE_ID}" \
              --header "Authorization: Bearer ${LINODE_TOKEN}" \
              --header "accept: application/json"
